# Healthpadi_Backend-Team_Project-

./: .env  .env.example  SETUP.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt  test_email_signup.py  test_send_other.py  test_smtp.py
facilities/: admin.py  apps.py  models.py  serializer.py  signals.py  urls.py  views.py
facilities/management/commands/: sync_osm.py
facilities/migrations/: 0001_initial.py  0002_facilities_procedures_facilities_rating_and_more.py  0003_facilityprocedure.py  0004_procedurelibrary_alter_facilityprocedure_options_and_more.py  0005_remove_facilities_provider_and_more.py  0006_delete_facilities.py  0007_remove_facility_claimed_by_and_more.py  0008_delete_facility_remove_facilityclaim_provider.py
healthpadi/: asgi.py  settings.py  urls.py  wsgi.py
notification/: models.py  serializers.py  urls.py  views.py
notification/migrations/: 0001_initial.py
providers/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
providers/migrations/: 0001_initial.py
reports/: admin.py  models.py  serializers.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_alter_report_facility.py  0003_alter_report_facility.py
scripts/: seed_data.py  seed_hospitals.py  seed_prices.py  test_auth.py  test_search.py
search/: tests.py  urls.py  views.py
user/: apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_role.py
