[project]
name = "healthpadi"
version = "0.1.0"
description = "Healthcare pricing transparency platform for Nigeria"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "python-dotenv>=1.0.0",
    "django-cors-headers>=4.0",
    "mysqlclient>=2.2",
    "requests>=2.33.1",
    "gunicorn>=23.0.0",
]
